tests/types/errors/too_many_args.mochi
fun greet(name: string) {
  print("Hi " + name)
}

greet("Alice", "Bob") // too many args